<resources>
    <string name="app_name">Hotel Booking</string>
    <string name="title_activity_mhome">Hotel Booking App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lasith Malinga</string>
    <string name="nav_header_subtitle">lasith@malinga.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_todo">Things To Do</string>
    <string name="menu_addPlaces">Add Places</string>
    <string name="menu_managePlaces">Manage Places</string>
    <string name="menu_addHotel">Add Hotels</string>
    <string name="menu_manageHotel">Manage Hotels</string>
    <string name="menu_contributions">Your Contributions</string>
    <string name="menu_editProfile">Edit Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="addHotelName">Enter Hotel Name</string>
    <string name="addHotelAddress">Enter Hotel Address</string>
    <string name="addHotelDistrict">Enter District</string>
    <string name="addHotelGrade">Enter Grade</string>


    <string name="addPackageName">Enter Package Name</string>
    <string name="addPackageDescription">Enter Package Description</string>
    <string name="addPackageValue">Enter Value</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="addMorePackages">Add More Packages</string>
    <string name="edit">Edit</string>
    <string name="Submit">Submit</string>

    <string name="unameerr">Retype Username</string>
    <string name="uemailerr">Invald Email</string>
    <string name="uconterr">Invalid Contact Number</string>
    <string name="upwderr">Fill the Password</string>


</resources>
