<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_menu_todo"
            android:title="@string/menu_todo" />
    </group>

    <item android:title="@string/menu_contributions">
        <menu>
            <item
                android:id="@+id/nav_addPlaces"
                android:icon="@drawable/ic_menu_addplaces"
                android:title="@string/menu_addPlaces" />
            <item
                android:id="@+id/nav_managePlaces"
                android:icon="@drawable/ic_menu_manageplaces"
                android:title="@string/menu_managePlaces" />
            <item
                android:id="@+id/nav_addHotels"
                android:icon="@drawable/ic_menu_addhotel"
                android:title="@string/menu_addHotel" />
            <item
                android:id="@+id/nav_manageHotels"
                android:icon="@drawable/ic_menu_managehotels"
                android:title="@string/menu_manageHotel" />
        </menu>
    </item>
    <item android:title="@string/menu_contributions">
        <menu>
            <item
                android:id="@+id/nav_editProfile"
                android:icon="@drawable/ic_menu_editaccount"
                android:title="@string/menu_editProfile" />
        </menu>
    </item>

</menu>
